--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -15,6 +15,10 @@ body{
        --gray:#5A5959; 
 }
 
+.container{
+        max-width: 1280px;
+        margin: 0 auto;
+}
 
 nav{
         display: flex;
@@ -23,7 +27,6 @@ nav{
         margin: 0 auto;
         height: 72px;
         align-items: center;
-        border: 1px solid red;
 
         >ul{
                 display: flex;
@@ -43,3 +46,40 @@ nav{
         }
 }
 
+main{
+        display: flex;
+        align-items: center;
+        height: calc(100vh - 72px);
+
+           >.hero-content{
+                Width: 595px;
+                Height:613px;
+
+                >h1{
+                        font-weight: 800;
+                        font-size: 108px;
+                        line-height: 102px;
+                }
+                >p{
+                        font-weight: 600px;
+                        font-size: 26px;
+                        line-height: 24px;
+                }
+
+                >.hero-btn{
+                       >button{
+                        all:unset;
+                        Width:75px;
+                        Height:31px;
+                        padding: 6px 16px;
+                        background-color: var(--red);
+                        text-align: center;
+                        font-weight: 600;
+                        color: white;
+                       }
+                   }
+           }
+
+         
+       
+}
